--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "start": "parcel",
     "build": "parcel build"
   },
-  "dependencies": {},
+  "dependencies": {
+    "bootstrap": "^5.3.5",
+    "jquery": "^3.7.1"
+  },
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.14.4",
     "parcel": "^2.14.0"
   }
 }
