converted to pug

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "parcel-vanilla-starter",
   "private": true,
   "version": "0.0.0",
-  "source": "src/index.html",
+  "source": "src/index.pug",
   "scripts": {
     "start": "parcel",
     "build": "parcel build"
@@ -12,6 +12,7 @@
     "jquery": "^3.7.1"
   },
   "devDependencies": {
+    "@parcel/transformer-pug": "^2.14.4",
     "@parcel/transformer-sass": "^2.14.4",
     "parcel": "^2.14.0"
   }
